# ONYX

./: .clang-format  .gitignore  BuildDebug.bat  BuildRelease.bat  CMakeLists.txt  Debug.bat  README.md  RunDebug.bat  RunRelease.bat
build-debug/: .ninja_deps  .ninja_log  CMakeCache.txt  ONYX.rdi  build.ninja  cmake_install.cmake
build-debug/res/: Resource.rc  cmake_install.cmake
build-debug/res/shaders/: shaders.hlsl
build-debug/src/: cmake_install.cmake
res/: CMakeLists.txt  Resource.rc
res/shaders/: CMakeLists.txt  Compile.bat  shaders.hlsl  text.hlsl
src/: Arena.cpp  Arena.hpp  Audio.hpp  CMakeLists.txt  Camera6DOF.cpp  Camera6DOF.hpp  Console.hpp  ConstantBuffers.hpp  DX.cpp  DX.hpp  DX_CreateCB.cpp  DX_CreateCUS.cpp  DX_CreateTex.cpp  DX_DSV.cpp  DX_Debug.cpp  DX_GenerateTex.cpp  DX_LoadAssets.cpp  DX_LoadPipeline.cpp  DX_PopulateCommandLits.cpp  DX_Update.cpp  DX_WaitForPreviousFrame.cpp  DeltaTime.cpp  DeltaTime.hpp  DescriptorManager.cpp  DescriptorManager.hpp  DescriptorManager_CreateCB.cpp  DescriptorManager_CreateSRV.cpp  DescriptorManager_Init.cpp  DescriptorManager_ShutDown.cpp  GeometryManager.cpp  GeometryManager.hpp  GeometryManager_CreateGeometry.cpp  GeometryManager_Draw.cpp  GeometryManager_Init.cpp  GeometryManager_ShutDown.cpp  Helper.cpp  Helper.hpp  ICam.cpp  ICam.hpp  Input.cpp  (+6 more)
